--- a/item-1.html
+++ b/item-1.html
@@ -115,7 +115,6 @@
 
         <hr>
 
-        <!-- Project Five -->
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
@@ -128,6 +127,23 @@
                 <p>At the 2014 HopHacks (JHU hackathon) competition,  we developed an Android app to detect early stages of melanoma via computer vision algorithms. We placed 3rd overall, and were winners of the JHU Social Innovation Lab’s Award for the greatest impact on society, for which we were offered a spot in their startup incubator and seed funding.</p>
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="http://challengepost.com/software/mole-sniffer">View Submission</a>
+
+        </div>
+    
+    <hr>
+    
+    <div class="row">
+            <div class="col-md-5">
+                <a href="#">
+                    <img class="img-responsive" src="images/large/lock.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 hvr-sweep-to-left">
+                <h3>Microstereo Lithography for 3D printing CAD objects</h3>
+                <p>A year-long project in high school with the Mechanical Engineering dept. at the UIUC to design a cheaper alternative to high-precision 3D printing. We designed a novel method to print large flat objects by polymerizing a liquid with UV radiation so that they do not bend/buckle. On my own time, I printed a working combination lock entirely out of our polymerized liquid. We presented our results at the world-famous UIUC Engineering Open House.</p>
+                <a class="btn btn-primary hvr-sweep-to-left" href="files/3D_Large_objects.pdf">Read the Paper</a>
+
+            </div>
 
         </div>
 
