--- a/item-3.html
+++ b/item-3.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                    <img class="img-responsive" src="images/large/id5r.png" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                    <img class="img-responsive" src="images/large/forests.png" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
@@ -76,7 +76,7 @@
 
             <div class="col-md-5">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                    <img class="img-responsive" src="images/large/chlorophyll.png" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                    <img class="img-responsive" src="images/large/relativity.png" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
@@ -107,20 +107,19 @@
         <hr>
 
         <!-- Project Five -->
-<!--
         <div class="row">
             <div class="col-md-5">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/300x400" alt="">
+                    <img class="img-responsive" src="images/large/vertical.png" alt="">
                 </a>
             </div>
             <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
+                <h3>Stabilization of Inverted, Vibrating Pendulums</h3>
+                <h4>Physics C Final Project</h4>
+                <p>A neat experiment about the stability of dynamical systems.</p>
             </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/invertedpendulums3.ppt">View Presentation</a>
         </div>
--->
 
         <footer class="footer-distributed" style="background-color: #f6f6f6; margin-top:20px ">
 			<div class="footer-left">
