--- a/item-6.html
+++ b/item-6.html
@@ -201,7 +201,13 @@
 								<figcaption><h3>Hire Data Labelers</h3><p>If you're desperate</p></figcaption>
 							</figure>
 						</li>
-						
+   
+						 <li>
+							<figure>
+								<a href="http://scott.fortmann-roe.com/docs/BiasVariance.html"><img src="images/thumb/variance.png"/></a>
+								<figcaption><h3>Variance Bias Tradeoff</h3><p>A good illustration</p></figcaption>
+							</figure>
+						</li>
 					</ul>
 				</section><!-- // grid-wrap -->
 				
