--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>1 Col Portfolio - Start Bootstrap Template</title>
+    <title>Projects</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -31,7 +31,7 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">School Projects and Notable Assignments</small>
+                <h1 class="page-header">Projects</small>
                 </h1>
             </div>
         </div>
