more projects added

--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,44 @@
         <div class="row">
             <div class="col-md-5">
                 <a href="">
+                    <img class="img-responsive" src="images/large/splitAE-TSNE-train.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 hvr-sweep-to-left">
+                <h3>Deep Methods for Canonical Correlation Analysis: A Comparison of Split Autoencoders, Kernel CCA, and a novel Deep CCA Algorithm for Multi-view Phonetic Recognition Systems</h3>
+                <p> 
+                    The primary advantage of multiview learning in the realm of classification is the ability to incorporate multiple modalities of the same phenomenon for learning. For example, today's social media world allows for photos, text, locations, friend tagging, and audio recordings to be part of a single "post". A classifier can be trained for each modality, and in the case of subspace learning, the correlation objective can be applied to all classifiers simultaneously to yield better performance than a classifier trained in isolation. Canonical Correlation Analysis lends itself well to situations wherein one modality of the data should be predicted or reconstructed from the other modalities. Such is the case for phoneme recognition in speech processing. This project explores a range of nonlinear classifiers for recognizing phonemes in the XRMB dataset. Since it was just released (at the time of writing), Tensorflow was used to implement the deep techniques. 
+                </p>
+                
+            </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/DCCA.pdf">Read the Paper</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="https://github.com/corbyrosset/Correlation-Analysis-and-Friends">Get the Code</a>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col-md-5">
+                <a href="">
+                    <img class="img-responsive" src="images/large/eigenface.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-6 hvr-sweep-to-left">
+                <h3>Stochastic and Incremental algorithms for Linear Subspace Learning for Facial Identification</h3>
+                <p> Often times data sets are too large or high dimensional to be sensible. Perhaps the data contains redundant, unnecessary, or uninformative features. For example, out of the several million pixels representing a persons face in an image, how many of those are necessary to determine the subject's identity? Subspace learning answers this question by finding a suitably small subspace of the data that retains information needed to reconstruct the original data with minimal loss. This project describes, replicates, and compares the state of the art stochastic and incremental methods to subspace learning and applies them to the well known Yale Face Dataset.
+                </p>
+                
+            </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/StochasticSubspaceLearning.pdf">Read the Paper</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="https://github.com/corbyrosset/Stochastic-and-Incremental-PCA">Get the Code</a>
+        </div>
+
+        <hr>
+
+        <!-- Project Two -->
+        <div class="row">
+            <div class="col-md-5">
+                <a href="">
                     <img class="img-responsive" src="images/large/reinforcement.png" alt="">
                 </a>
             </div>
