--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
@@ -21,9 +20,9 @@
 <body>
     <!--fancy changing header -->
     
-	<main class="cd-main">
+	<!-- <main class="cd-main"> -->
         <div class="centered">
-            <p class="title">Hi. I'm Corby, an undergraduate Computer Science and Applied Mathematics major at Johns Hopkins, and this is my new website! (very much in-the-works)</p>
+            <p class="title">Hi. I'm Corby, a masters student in Computer Science  at Johns Hopkins, and this is my new website! Check out the projects page for cool things I do; check out the links page for random internet things</p>
         </div>
             
 		<header>
