--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,8 @@
                     <img class="img-responsive" src="images/large/splitAE-TSNE-train.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
-                <h3>Deep Methods for Canonical Correlation Analysis: A Comparison of Split Autoencoders, Kernel CCA, and a novel Deep CCA Algorithm for Multi-view Phonetic Recognition Systems</h3>
+            <div class="col-md-6">
+                <h3>A Compairison of Deep Methods for Canonical Correlation Analysis on Phoneme Recognition</h3>
                 <p> 
                     The primary advantage of multiview learning in the realm of classification is the ability to incorporate multiple modalities of the same phenomenon for learning. For example, today's social media world allows for photos, text, locations, friend tagging, and audio recordings to be part of a single "post". A classifier can be trained for each modality, and in the case of subspace learning, the correlation objective can be applied to all classifiers simultaneously to yield better performance than a classifier trained in isolation. Canonical Correlation Analysis lends itself well to situations wherein one modality of the data should be predicted or reconstructed from the other modalities. Such is the case for phoneme recognition in speech processing. This project explores a range of nonlinear classifiers for recognizing phonemes in the XRMB dataset. Since it was just released (at the time of writing), Tensorflow was used to implement the deep techniques. 
                 </p>
@@ -63,7 +63,7 @@
                     <img class="img-responsive" src="images/large/eigenface.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Stochastic and Incremental algorithms for Linear Subspace Learning for Facial Identification</h3>
                 <p> Often times data sets are too large or high dimensional to be sensible. Perhaps the data contains redundant, unnecessary, or uninformative features. For example, out of the several million pixels representing a persons face in an image, how many of those are necessary to determine the subject's identity? Subspace learning answers this question by finding a suitably small subspace of the data that retains information needed to reconstruct the original data with minimal loss. This project describes, replicates, and compares the state of the art stochastic and incremental methods to subspace learning and applies them to the well known Yale Face Dataset.
                 </p>
@@ -82,7 +82,7 @@
                     <img class="img-responsive" src="images/large/reinforcement.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Reinforcement Learning: A Comparison of Value Iteration and Q-learning Algorithms in a Markov Decision Process</h3>
                 <p>Abstract: In this paper we apply two different reinforcement learning algorithms to a Markov Decision Process (MDP). The first is value iteration (VI) with full knowledge of the environment’s stochastic state transition model, the second is Q-learning (Q), which does not require the model. We found that VI converges to a near-optimal solution more quickly, but given the right input functions and parameters, Q yields slightly better performance, especially when the reward function is particularly harsh. Both agents exploited interesting “loopholes” in the environment to achieve better scores. We recommend using VI to solve an MDP whenever enough information exists...</p>
                 
@@ -99,10 +99,10 @@
                     <img class="img-responsive" src="images/large/forests.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Random Forests</h3>
                 <h4>Classification by Majority Vote of a Forest of Decision Trees</h4>
-                <p>Some code I threw together over a weekend based on Leo Breiman's paper discussing variance reduction for classical information-theoretic decision trees. The solution is basically to average out the classification of many partially-trained trees. On a related note, I also implemented boosted decision trees for comparison</p>
+                <p>Random Forests are some of the most popular, thoroughly studied, and widely used classifiers. A major contribution came from Leo Breiman's paper discussing variance reduction for classical information-theoretic decision trees by randomized training of a community of classifiers. The solution is basically to take the majority vote from the many trees each trained on a subsample of the data with randomized selection of test attributes. On a related note, I also implemented boosted decision trees for comparison</p>
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="files/RandomForests.pdf">Read the Paper</a>
             <a class="btn btn-primary hvr-sweep-to-left" href="https://github.com/corbyrosset/Algorithms/tree/master/RandomForests">Get the Code</a>
@@ -118,9 +118,9 @@
                     <img class="img-responsive" src="images/large/decisoin.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Decision Trees: A Comparison of Genetic and Information-Theoretic Classification Trees</h3>
-                <h4>A paper comparing some decision tree learning algorithms on UCI data sets.</h4>
+                <h4>A paper describing my first interaction with, and comparison of, some of the canonical decision tree learning algorithms on UCI data sets.</h4>
                 <p></p>
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="files/decision.pdf">Read the Paper</a>
@@ -135,10 +135,10 @@
                     <img class="img-responsive" src="images/large/id5r.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Literature Review of Online Decision Tree Classification Algorithms</h3>
                 <h4>Independent Research</h4>
-                <p>This paper summarizes the most impactful literature of online decision tree (ODT) algorithms. These classification algorithms are designed to handle extremely large datasets that grow everyday. I will implement and test some or all of these algorithms.</p>
+                <p>This paper summarizes the most impactful literature of online decision tree (ODT) algorithms. These classification algorithms are designed to handle extremely large datasets or data streams with high frequency. Learning decision trees in an online setting is a natural topic for investigation if one is already familiar with the basic batch algorithms. They are also more practical from a business and engineering standpoint, as they are proven to perform asymptotically as well as a batch learner. </p>
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="files/OnlineDecisionTreeReview.pdf">Read the Paper</a>
         </div>
@@ -152,9 +152,9 @@
                     <img class="img-responsive" src="images/large/DT7.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Respirage: A Respiratory Rate Measurement Device for Emergency Department Triage</h3>
-                <h4>My biomedical engineering design team's final report summarizing the design and testing results of our medical device's prototype.</h4>
+                <p>My biomedical engineering design team's final report summarizing the design and testing results of our medical device's prototype.</p>
                 <p>We designed a portable, non-invasive vital sign measurement device for the fast-paced environment of emergency department triage.</p>
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="files/RRDT7.pdf">Read the Paper</a>
@@ -171,7 +171,7 @@
                     <img class="img-responsive" src="images/large/molesniffer.jpg" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>MoleSniffer</h3>
                 <h4>Cancer Diagnostics Mobile App</h4>
                 <p>At the 2014 HopHacks (JHU hackathon) competition,  we developed an Android app to detect early stages of melanoma via computer vision algorithms. We placed 3rd overall, and were winners of the JHU Social Innovation Lab’s Award for the greatest impact on society, for which we were offered a spot in their startup incubator and seed funding.</p>
@@ -190,9 +190,9 @@
                     <img class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/a/a6/SIR_model_simulated_using_python.gif" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>MATLAB Simulation of SIR Model for Infectious Disease</h3>
-                <p>Final project for Biomedical Modeling and Design class at JHU comprising of a poster presentation discussing the results of our MATLAB simulation of the spread of contagious diseases using random matrices. We placed "highest honors" for the project out of our freshman class.</p>
+                <p>Final project for a Biomedical Modeling and Design class at JHU comprising. I implemented a MATLAB simulation of the spread of contagious diseases based on commonly used models in epidemiology. We won "highest honors" for the project out of our class.</p>
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="files/ModelInfectiousDisease.pdf">View the Presentation</a>
 
@@ -207,7 +207,7 @@
                     <img class="img-responsive" src="images/large/lock.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Microstereo Lithography for 3D printing CAD objects</h3>
                 <p>A year-long project in high school with the Mechanical Engineering dept. at the UIUC to design a cheaper alternative to high-precision 3D printing. We designed a novel method to print large flat objects by polymerizing a liquid with UV radiation so that they do not bend/buckle. On my own time, I printed a working combination lock entirely out of our polymerized liquid. We presented our results at the world-famous UIUC Engineering Open House.</p>
             </div>
@@ -223,9 +223,9 @@
                     <img class="img-responsive" src="images/large/chlorophyll.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Effects of Abrasion on Chlorophyll Fluorescence</h3>
-                <h4>Year long high school research project with the late Dr. Robert Clegg.</h4>
+                <h4>Year long high school research project with the late Dr. Robert Clegg, former chair of the Biophysics Department at the University of Illinois Urbana-Champaign</h4>
                 <p></p>
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="files/ChlorophyllFluorescence.pdf">Read the Paper</a>
@@ -240,7 +240,7 @@
                     <img class="img-responsive" src="images/large/relativity.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Special Relativity Presentation</h3>
                 <h4>Based on Stanford EPGY's Special Relativity Course I attended over the summer of 2012</h4>
                 <p>A semester capstone project for senior year independent study</p>
@@ -257,7 +257,7 @@
                     <img class="img-responsive" src="images/large/vertical.png" alt="">
                 </a>
             </div>
-            <div class="col-md-6 hvr-sweep-to-left">
+            <div class="col-md-6">
                 <h3>Stabilization of Inverted, Vibrating Pendulums</h3>
                 <h4>Physics C Final Project</h4>
                 <p>A neat experiment about the stability of dynamical systems.</p>
