--- a/projects.html
+++ b/projects.html
@@ -75,10 +75,6 @@
 
         <hr>
 
-
-
-
-
         <div class="row">
             <div class="col-md-5">
                 <a href="">
@@ -87,17 +83,13 @@
             </div>
             <div class="col-md-6">
                 <h3>Parsing</h3>
-                <p> Extracting meaning from raw text is a difficult task. There are many ambiguities in natural and formal text arising from synonymy, polysemy, syntactic, and lexical ambiguities. Consider one of my favorite examples from Dr. Eisner: "Time flies like an arrow". Is this a command to time fruit flies quickly? Or that the abstract notion of time moves quickly? Or that a certain species of insect known as the time fly happen to like a particular arrow? Fortunately, while each of these parses is possible, some are more likely than others in the context of large corpora. Earley's algorithm, implemented here with a few optimizations, is a way to construct the most likely parse tree from a grammar of smaller context-free rules composed by dynamic programming. There are several great resources to learn how this well-studied algorithm works. 
+                <p> Extracting meaning from raw text is a difficult task. There are many ambiguities in natural and formal text arising from synonymy, polysemy, syntactic, and lexical ambiguities. Consider one of my favorite examples from Dr. Eisner: "Time flies like an arrow". Is this a command to time fruit flies quickly? Or that the abstract notion of time moves quickly? Or that a certain species of insect known as the time fly happen to like a particular arrow? Fortunately, while each of these parses is possible, some are more likely than others in the context of large corpora. Earley's algorithm, implemented here with a few optimizations, is a way to construct the most likely parse tree from a grammar of smaller context-free rules composed by dynamic programming. There are several great resources to learn how this well-studied algorithm works. Photo: http://www.sanjaymeena.net/
                 </p>
                 
             </div>
             <a class="btn btn-primary hvr-sweep-to-left" href="https://www.cs.jhu.edu/~jason/465/PDFSlides/lect10-earley.pdf">See Explanation</a>
-            <a class="btn btn-primary hvr-sweep-to-left" href="https://github.com/corbyrosset/Algorithms/parser">Get the Code</a>
+            <a class="btn btn-primary hvr-sweep-to-left" href="https://github.com/corbyrosset/Algorithms/tree/master/parser">Get the Code</a>
         </div>
-
-
-
-
 
         <hr>
 
