--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,10 @@
     <meta name="author" content="">
 
     <title>Projects</title>
+    <h1 style="position: absolute; left: 10px; top: 0px;">
+        <a href="index.html"style="text-decoration: none; color: #f0f0f0;">Home
+        </a>
+    </h1>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -24,6 +28,7 @@
     
 
 <body style="background-color:#619DE5; margin: 20px 0; font-family:Open Sans, sans-serif;">
+
 
     <!-- Page Content -->
     <div class="container">
