--- a/stuff.html
+++ b/stuff.html
@@ -7,6 +7,13 @@
 		<title>Travel Photos</title>
 		<link rel="stylesheet" type="text/css" href="css/gridGallery.css" />
 		<script src="js/modernizr.custom.js"></script>
+
+		 <h1 style="position: absolute; left: 10px; top: 0px;">
+	        <a href="index.html"style="text-decoration: none; color: #f0f0f0;">Home
+	        </a>
+	    </h1>
+
+
 	</head>
 	<body>
 		<div class="container">
