--- a/projects.html
+++ b/projects.html
@@ -29,8 +29,7 @@
 
 <body style="background-color:#619DE5; margin: 20px 0; font-family:Open Sans, sans-serif;">
 
-
-    <!-- Page Content -->
+     <!-- Project -->
     <div class="container">
 
         <!-- Page Heading -->
@@ -41,6 +40,23 @@
             </div>
         </div>
         <!-- /.row -->
+
+        <div class="row">
+            <div class="col-md-5">
+                <a href="">
+                    <img class="img-responsive" src="images/large/BaBi.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-6">
+                <h3>Deep Recurrent Neural Networks for Question Answering</h3>
+                <p> A summary of deep learning algorithms for question answering for this year's thesis project, mostly focusing on Weston et al's Memory Neural Networks and their variants, such as the Neural Reasoner, that are applied to Facebook's BabI dataset. The QA task here is not factoid question answering, which is traditionally an information extraction task, but answering questions that require inference over facts that are local to a given scenario (i.e. there is no knowledge base on the internet containing the relevant data, you only have the facts that you are told). This is a challenging new frontier that requires understanding the relationships between entities that may change over time, and then doing inference over accumulated knowledge. These tasks bring the NLP community one step closer to interactive and predictive dialogue systems. 
+                </p>
+                
+            </div>
+            <a class="btn btn-primary hvr-sweep-to-left" href="files/QA_MemNN_Overview_releasable.pdf">Report</a>
+        </div>
+
+        <hr>
 
         <div class="row">
             <div class="col-md-5">
