added bandits paper

--- a/projects.html
+++ b/projects.html
@@ -122,6 +122,26 @@
         <div class="row">
             <div class="col-md-5">
                 <a href="">
+                    <img class="img-responsive" src="images/large/hedge.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-6">
+                <h3>Multi-armed Bandits and Regret</h3>
+                <p> I was curious about how the CS Theory community approached the kind of problems the ML community faces in the reinforcement learning setting. It turns out that if you ignore the notion of a state space and only consider an action space, you can guarantee "good" behavior even if rewards are adversarially assigned. Adversaries and theoretic guarantees are something the reinforcement learning (and even ML) community has struggled to pin down, so it was very refreshing to compare and contrast the two fields, especially with respect to their objectives (regrets vs. discounted rewards) and techniques for tracking the best actions (similar to boosting).
+                </p>
+
+                <p>
+                <a class="btn btn-primary hvr-sweep-to-left" href="files/banditsurvey.pdf">Paper</a>
+                </p>
+                
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col-md-5">
+                <a href="">
                     <img class="img-responsive" src="images/large/crf.png" alt="">
                 </a>
             </div>
@@ -138,6 +158,7 @@
         </div>
 
         <hr>
+
 
         <!-- Project One -->
         <div class="row">
