--- a/black_and_white.html
+++ b/black_and_white.html
@@ -22,36 +22,46 @@
 <body>
 
 	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="index.html">Corby Rosset</a>
-		</div>
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
-			<li><a href="projects.html">Projects</a></li>
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Photos <span class="caret"></span></a>
-			<ul class="dropdown-menu">
-				<li><a href="black_and_white.html">Black&White</a></li>
-				<li><a href="art.html">ART</a></li>
-				<li><a href="https://goo.gl/photos/eqSxwjWWtwjuq5hW8">Random Things</a></li>
-			</ul>
-			</li>
-			<li><a href="http://www.linkedin.com/in/corbyrosset">LinkedIn</a></li>
-			<li><a href="mailto:crosset2@jhu.edu">Email</a></li>
-			<li><a href="https://github.com/corbyrosset">Github</a></li>
-			</ul>
-		</div>
-		</div>
-	</nav>
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">Corby Rosset</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav">
+                    <li><a href="projects.html">Projects</a></li>
+
+                    <li><a href="research.html">Research</a></li>
+
+                    <!-- <li><a href="stuff.html">Good Links</a></li> -->
+                    
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Photos <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="black_and_white.html">Black & White</a></li>
+                        <li><a href="art.html">Art</a></li>
+                        <li><a href="https://goo.gl/photos/eqSxwjWWtwjuq5hW8">Random Things</a></li>
+                      </ul>
+                    </li>
+
+                    <li><a href="http://www.linkedin.com/in/corbyrosset">LinkedIn</a></li>
+
+                    <li><a href="mailto:crosset2@jhu.edu">Email</a></li>
+
+                    <li><a href="https://github.com/corbyrosset">Github</a></li>
+
+                  </ul>
+                </div>
+            </div>
+        </nav>
 
 	<!-- Page Content -->
 	<div class="container">
